# untitled_incremental_lootbox_game

./: Cargo.toml  README.md  index.html
src/: app.rs  event.rs  input.rs  main.rs
src/animation/: fireworks.rs  float_text.rs  mod.rs  screen_flash.rs
src/audio/: mod.rs  sounds.rs  sounds_stub.rs
src/data/: chests.rs  items.rs  mod.rs  rebirth_skills.rs  relics.rs  skills.rs  upgrades.rs
src/game/: chest.rs  inventory.rs  item.rs  mod.rs  player.rs  progression.rs  rebirth.rs  relic.rs  save.rs  skill_tree.rs  state.rs  upgrade.rs
src/ui/: chest_art.rs  game_view.rs  layout.rs  mod.rs  tab_panel.rs
src/ui/tabs/: inventory.rs  mod.rs  rebirth.rs  relics.rs  skills.rs  stats.rs  upgrades.rs
src/ui/widgets/: mod.rs  rarity_label.rs
