[package]
name = "lootbox_game"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.30", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29"
ratatui = { version = "0.30", features = ["crossterm"] }
color-eyre = "0.6"
directories = "6"
rodio = "0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ratzilla = "0.3"
web-sys = { version = "0.3", features = [
    "Storage", "Window", "Performance",
    "AudioContext", "AudioContextState", "BaseAudioContext",
    "OscillatorNode", "OscillatorType",
    "GainNode", "AudioParam", "AudioNode",
    "AudioDestinationNode", "AudioScheduledSourceNode",
] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }

# Ensure catch_unwind works in WASM to survive panics during resize
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
